# TGSpeechBox

./: .gitignore  CMakeLists.txt  Developers.md  Dictionary-editing.md  Makefile.linux  README-linux.md  Tuning.md  readme.md  speechPlayer.py
.github/workflows/: build-linux.yml
extras/speech-dispatcher/: tgsb-generic.conf  tgsb-native.conf  tgsb-speak
installer/: TGSpeechSapi.iss
nvdaAddon/locale/es/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/locale/hu/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/locale/pt_BR/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/synthDrivers/tgSpeechBox/: __init__.py  _frontend.py  constants.py  espeak_bridge.py  langPackSettingsPanel.py  lang_pack_settings.py  speechPlayer.py  speech_pipeline.py  text_utils.py  voice_management.py  voicing_tone.py
packs/: phonemes.yaml
packs/dict/: en-compounds.tsv  en-us-dict.tsv  en-us-stress.tsv  en-us-user.tsv  es-letters.tsv
packs/lang/: bg.yaml  cs.yaml  da.yaml  de.yaml  en-au.yaml  en-ca.yaml  en-gb.yaml  en-us.yaml  en.yaml  es.yaml  fi.yaml  fr.yaml  hr.yaml  hu.yaml  it.yaml  nl.yaml  pl.yaml  pt-br.yaml  pt-pt.yaml  pt.yaml  ro.yaml  ru.yaml  sk.yaml  sv.yaml  tr.yaml  uk.yaml
resources/espeak-ng-data/: ja_dict  ko_dict  my_dict  vi_dict
src/: dspCommon.h  formantGenerator.h  frame.cpp  frame.h  speechPlayer.cpp  speechPlayer.def  speechPlayer.h  speechWaveGenerator.cpp  speechWaveGenerator.h  voiceGenerator.h  voicingTone.h
src/frontend/: data_query.cpp  data_query.h  dict_lookup.cpp  dict_lookup.h  frame_emit.cpp  frontend_data_api.cpp  frontend_handle.h  ipa_engine.cpp  ipa_engine.h  ipa_internal.h  ipa_normalize.cpp  ipa_normalize.h  ipa_parser.cpp  ipa_parser.h  nvspFrontend.cpp  nvspFrontend.h  pack.cpp  pack.h  text_parser.cpp  text_parser.h  text_prepare.cpp  text_prepare.h  utf8.cpp  utf8.h  yaml_export.cpp  yaml_export.h
src/frontend/passes/: allophones.cpp  boundary_smoothing.cpp  diphthong_collapse.cpp  prosody.cpp  rate_compensation.cpp  special_coartic.cpp
src/sapi/: ISpTTSEngineImpl.cpp  debug_log.h  sapi_main.cpp  tgsb_runtime.cpp  tgsb_runtime.hpp  tgsb_settings.cpp  tgsb_settings.hpp
src/speechd/: sd_tgsb.cpp
tgsb-static/: CMakeLists.txt
tools/: lang_pack.py  tgsbRender.cpp
tools/linux/: install.sh
tools/tgsbPhonemeEditorWin32/: CMakeLists.txt  Dialogs.cpp  DictionaryEditor.cpp  DictionaryEditor.h  RulesEditor.cpp  appcontroller.cpp  chunking.cpp  phonemizer_cli.cpp  resource.h  resources.rc  tgsb_runtime.cpp  tgsb_runtime.h  yaml_edit.cpp  yaml_edit.h
tools/tgsbSapiSettings/: resource.h  settings_app.cpp  settings_app.rc
